--- a/main.css
+++ b/main.css
@@ -1,28 +1,14 @@
 body {
   font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
 }
 
 header, footer {
   background-color: #0f1f2cea;
   color: #ffffff;
-  padding: 20px;
-}
-
-h1 {
-  margin: 0;
-}
-
-h3 {
-  margin-top: 10px;
-  color: #bbbbbb;
+  padding: 25px;
 }
 
 nav menu {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
   display: flex;
   justify-content: flex-end;
   gap: 15px;
@@ -35,19 +21,13 @@ nav menu li {
 nav menu li a {
   font-size: 0.9rem;
   color: #ffffff;
-  text-decoration: none;
   font-weight: bold;
+  text-decoration: none;
 }
 
 nav menu li a:hover {
   text-decoration: underline;
   color: #bbbbbb;
-}
-
-hr {
-  margin-top: 20px;
-  margin-bottom: 20px;
-  border-color: #ffffff;
 }
 
 main {
@@ -60,44 +40,36 @@ main h2 {
   color: #0f1f2c;
 }
 
-.quiz-list {
+.qlist {
   list-style-type: none;
-  padding: 0;
-  margin: 0;
 }
 
-.quiz-list li {
-  margin-bottom: 10px;
+.qlist li {
+  margin-bottom: 15px;
 }
 
-.quiz-list li a {
-  font-size: 1.1rem;
-  color: #007bff;
+.qlist li a {
+  font-size: 1.2rem;
   text-decoration: none;
 }
 
-.quiz-list li a:hover {
+.qlist li a:hover {
   text-decoration: underline;
   color: #0056b3;
 }
 
-.recommended-box {
+.rec-box {
   background-color: #f8f9fa;
-  padding: 15px;
-  border: 1px solid #dee2e6;
+  padding: 20px;
   border-radius: 5px;
   margin-top: 20px;
+  border: 1px solid #b7bbbe;
 }
 
-.recommended-box h4 {
-  margin-top: 0;
+
+
+.rec-box h4 {
   margin-bottom: 15px;
-}
-
-.Recommended {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
 }
 
 .recquiz {
@@ -108,14 +80,8 @@ main h2 {
   background-color: #e9ecef;
 }
 
-footer p {
-  margin: 10px 0;
-}
 
-footer a {
-  color: #007bff;
-  text-decoration: none;
-}
+
 
 footer a:hover {
   text-decoration: underline;
@@ -137,4 +103,10 @@ footer {
   padding: 20px;
   width: 100%;
   text-align: left;
+}
+
+hr {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border-color: #ffffff;
 }
