--- a/startup_react/src/App.css
+++ b/startup_react/src/App.css
@@ -1,42 +1,132 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+body {
+  font-family: Arial, sans-serif;
+  height: 100%;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.header, .footer {
+  background-color: #0f1f2cea;
+  color: #ffffff;
+  padding: 25px;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.menu {
+  display: flex;
+  justify-content: flex-end;
+  gap: 15px;
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.menu li {
+  display: inline;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.menu li a {
+  font-size: 0.9rem;
+  color: #ffffff;
+  font-weight: bold;
+  text-decoration: none;
 }
 
-.card {
-  padding: 2em;
+.menu li a:hover {
+  text-decoration: underline;
+  color: #bbbbbb;
 }
 
-.read-the-docs {
-  color: #888;
+main {
+  padding: 20px;
+  flex-grow: 1;
+}
+
+main h2 {
+  font-size: 2rem;
+  margin-bottom: 20px;
+  color: #0f1f2c;
+}
+
+.qlist {
+  list-style-type: none;
+  padding: 0;
+}
+
+.qlist li {
+  margin-bottom: 15px;
+}
+
+.qlist li a {
+  font-size: 1.2rem;
+  text-decoration: none;
+}
+
+.qlist li a:hover {
+  text-decoration: underline;
+  color: #0056b3;
+}
+
+.rec-box {
+  background-color: #f8f9fa;
+  padding: 20px;
+  border-radius: 5px;
+  margin-top: 20px;
+  border: 1px solid #b7bbbe;
+}
+
+.rec-box h4 {
+  margin-bottom: 15px;
+}
+
+.recquiz {
+  cursor: pointer;
+}
+
+.recquiz:hover {
+  background-color: #e9ecef;
+}
+
+footer a {
+  color: #ffffff;
+}
+
+footer a:hover {
+  text-decoration: underline;
+}
+
+#custom {
+  height: 1px; 
+  background-color: #4d4d4d; 
+  border: none;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+h1 {
+  text-align: left;
+}
+html, body {
+  height: 100%;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; /* Ensures the container fills the viewport height */
+}
+main {
+  flex: 1; /* Makes the main content area take up any remaining space */
+}
+
+.foot {
+  text-align: left;
+}
+
+.link-container {
+  text-align: left;
 }
